# git-auto-commit

./: .gitignore  Cargo.toml  build.rs
src/: cli.rs  main.rs
src/llm/: mod.rs  ollama.rs
