[package]
name = "git-auto-commit"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.23", features = ["derive"] }
clap_derive = "4.5.18"
ollama-rs = "0.2.2"
tokio = { version = "1.42.0", features = ["rt", "rt-multi-thread", "macros"] }
tokio-macros = "2.4.0"

[build-dependencies]
clap = { version = "4.5.23", features = ["derive"] }
clap_derive = "4.5.18"
clap_mangen = "0.2.24"
